# MoodAPI

./: .env.example  .gitattributes  .gitignore  README.md  README_EN.md  README_PT.md  docker-compose.prod.yml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/: dependencies.py
app/api/routes/: history.py  sentiment.py
app/auth/: __init__.py  config.py  dependencies.py  models.py  router.py  schemas.py  service.py
app/core/: cache.py  database.py  exceptions.py  models.py  protocols.py  schemas.py
app/history/: repository.py  router.py  schemas.py  service.py
app/sentiment/: analyzer.py  models.py  repository.py  router.py  schemas.py  service.py  types.py
app/services/: analyzer.py  storage.py
app/shared/: error_handlers.py  middleware.py  rate_limiter.py
app/utils/: nlp_helpers.py
dockerfile/: docker-compose.yml  dockerfile
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  IndustrialCard.tsx  MetricValue.tsx  SentimentBadge.tsx  Sidebar.tsx  TextDetailModal.tsx  index.ts
frontend/src/pages/: AboutPage.tsx  AnalysisPage.tsx  DashboardPage.tsx  LogsPage.tsx  SettingsPage.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: build.sh
tests/: conftest.py  test_analyzer.py  test_api.py  test_history.py  test_sentiment.py
